Betrag von | nach \abs{} umgeschrieben
git-svn-id: https://svn.lug-jena.de/uni-skripte@1468 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -912,7 +912,7 @@ Kugel im bekannten Sinne mehr sein.
 \begin{beispiel}[reelle Zahlenfolgen]
 \begin{align*}
   a_n & = a & \text{\highl[Folge!konstante]{konstante Zahlenfolge}}\\
-  a_n & = \nicefrac{1}{n}\\
+  a_n & = \nicefrac{1}{n} & \text{\highl{Nullfolge}}\\
   a_n & = (-1)^n & \text{\highl[Folge!alternierende]{alternierende
      Zahlenfolge}}\\
   a_n & = q^n & q \in \R
@@ -1092,56 +1092,59 @@ vorigen Abschnitt folgt:
 \item zu zeigen: $\forall \varepsilon >0 \exists n_{\varepsilon}
   \in \N\forall n \geq n_{\varepsilon}\colon a_nb_n-ab=a_n(b_n-b)+(a_n-a)b$\\
   Nach \autoref{satz:beschraenkt} folgt, dass $(a_n)$ beschränkt ist,
-  d.\,h. $\exists M \geq 0 \forall n \in \N\colon |a_n| \leq M$. Sei
-  $\varepsilon > 0$. Dann existiert $n_0,n_1 \in \N$, so dass $|a-a_n|
-  \leq \frac{\varepsilon}{2(|b|+1)}$ für $n \geq n_1$ und $|b-b_n|
+  d.\,h. $\exists M \geq 0 \forall n \in \N\colon \abs{a_n} \leq M$. Sei
+  $\varepsilon > 0$. Dann existiert $n_0,n_1 \in \N$, so dass $\abs{a-a_n}
+  \leq \frac{\varepsilon}{2(\abs{b}+1)}$ für $n \geq n_1$ und $\abs{b-b_n}
   \leq \frac{\varepsilon}{2M}$ für $n \geq n_0$. Für $n \geq
   n_{\varepsilon} = \max \{n_0,n_1\}$ gilt
   \begin{align*}
-    \left. 
+    \left.
       \begin{array}{rcl}
-        |a_n-a| & \leq & \frac{\varepsilon}{2(|b|+1)}\\
-        |b_n-b| & \leq & \frac{\varepsilon}{2M}
+        \abs{a_n-a} & \leq & \frac{\varepsilon}{2(\abs{b}+1)}\\
+        \abs{b_n-b} & \leq & \frac{\varepsilon}{2M}
       \end{array}
     \right\}&
     \forall n \geq n_{\varepsilon}\\
-    |a_nb_n-ab| & \leq |a_n||b_n-b|+|a_n-a||b| &\leq M
-    \frac{\varepsilon}{2M}+\frac{\varepsilon}{2(|b|+1)}|b|\\
+    \abs{a_nb_n-ab} & \leq \abs{a_n}\abs{b_n-b}+\abs{a_n-a}\abs{b} &\leq M
+    \frac{\varepsilon}{2M}+\frac{\varepsilon}{2(\abs{b}+1)}\abs{b}\\
     & \leq \frac{\varepsilon}{2}+\frac{\varepsilon}{2}=\varepsilon
   \end{align*}
 \item Seien $b$ und $ b_n \neq 0$. Man zeigt zunächst: $\lim
   \nicefrac{1}{b_n}=\nicefrac{1}{\lim b}=\nicefrac{1}{b}$. Aus der
-  Tatsache, dass $\exists n_0 \forall n \geq n_0 \colon |b_n-b|\leq
-  \nicefrac{|b|}{2}$ für $b\neq 0$ folgt nach der Dreiecksungleichung,
-  dass $|b|-|b_n| \leq |b_n-b| \leq \nicefrac{|b|}{2}$ für $n \geq
+  Tatsache, dass $\exists n_0 \forall n \geq n_0 \colon \abs{b_n-b}\leq
+  \nicefrac{\abs{b}}{2}$ für $b\neq 0$ folgt nach der Dreiecksungleichung,
+  dass $\abs{b}-\abs{b_n} \leq \abs{b_n-b} \leq \nicefrac{\abs{b}}{2}$ für $n \geq
   n_0$. Daraus kann man nun für alle $n\geq n_0$ schließen, dass
-  $\nicefrac{|b|}{2} \leq |b_n|$\\
-  Sei $\varepsilon > 0$. Dann $\exists n_1 \in \N \colon |b_n-b| \leq
-  \frac{\varepsilon |b|^2}{2}$ und für $n \geq \max \{n_0,n_1\}$
+  $\nicefrac{\abs{b}}{2} \leq \abs{b_n}$\\
+  Sei $\varepsilon > 0$. Dann $\exists n_1 \in \N \colon \abs{b_n-b} \leq
+  \frac{\varepsilon \abs{b}^2}{2}$ und für $n \geq \max \{n_0,n_1\}$
   gilt:
-  \[\left|\frac{1}{b_n}-\frac{1}{b}\right|=\frac{|b_n-b|}{|b_n||b|}\leq
-  \frac{\varepsilon \nicefrac{|b|^2}{2}}{\nicefrac{|b|}{2}|b|}=\varepsilon\]
+  \[\left\lvert\frac{1}{b_n}-\frac{1}{b}\right\rvert
+  =\frac{\abs{b_n-b}}{\abs{b_n}\abs{b}}\leq
+  \frac{\varepsilon
+    \nicefrac{\abs{b}^2}{2}}{\nicefrac{\abs{b}}{2}\abs{b}}=\varepsilon\]
   Damit ist nach Regel~2 $\lim \frac{a_n}{b_n}=\frac{\lim a_n}{\lim b_n}$.
 \item Sei $\varepsilon > 0$. Dann $\exists n_{\varepsilon} \in
-  \N\colon|a_n-a|< \varepsilon \forall n \geq n_{\varepsilon}$. Nach der
+  \N\colon\abs{a_n-a}< \varepsilon \forall n \geq n_{\varepsilon}$. Nach der
   Dreiecksungleichung folgt für alle $n\geq n_\varepsilon\colon
-  ||a_n|-|a||\leq |a_n-a| < \varepsilon \Rightarrow \lim |a_n|=|a|$.
+  \abs{\abs{a_n}-\abs{a}} \leq \abs{a_n-a} < \varepsilon \Rightarrow
+  \lim \abs{a_n} =\abs{a}$.
 \item Annahme: $\lim a_n > \lim b_n$. Dann ist $\varepsilon =
   \nicefrac{a-b}{2}$ und es existieren $n_0,n_1 \in \N$, so dass
-  $|a_n-a| < \varepsilon$ für $n \geq n_0$ und $|b_n-b| < \varepsilon$
+  $\abs{a_n-a} < \varepsilon$ für $n \geq n_0$ und $\abs{b_n-b} < \varepsilon$
   für $n \geq n_1$. Wir definieren $n_{\varepsilon} \coloneqq \max
-  \{n_0,n_1\}\colon|a_n-a|<\varepsilon, |b_n-b|<\varepsilon$. Insbesondere
+  \{n_0,n_1\}\colon\abs{a_n-a}<\varepsilon, \abs{b_n-b}<\varepsilon$. Insbesondere
   da $\varepsilon = \nicefrac{a-b}{2}$ ist, folgt für alle $n\geq n_0\colon
   a-\varepsilon = b + \nicefrac{a-b}{2}= \nicefrac{a+b}{2}<a_n$ und
   $b_n<b+\varepsilon=\nicefrac{a+b}{2}$
   $\Rightarrow b_n < a_n \quad \forall n \geq n_{\varepsilon}$\lightning\\
   \qed
 \item Sei $\varepsilon > 0$. Dann $\exists n_0, n_1 \in \N$,
-  $|a_n-a|<\varepsilon$ und $|b_n-a|<\varepsilon$. Sei $n_{\varepsilon}\coloneqq
-  \max \{n_0,n_1\}$.
+  $\abs{a_n-a}<\varepsilon$ und $\abs{b_n-a}<\varepsilon$. Sei
+  $n_{\varepsilon}\coloneqq \max \{n_0,n_1\}$.
   \begin{align*}
     a-\varepsilon &\leq a_n \leq c_n \leq b_n \leq a+\varepsilon\\
-    &\Rightarrow |c_n-a| \leq \varepsilon & \forall n \geq n_{\varepsilon}\\
+    &\Rightarrow \abs{c_n-a} \leq \varepsilon & \forall n \geq n_{\varepsilon}\\
     &\Rightarrow \lim c_n = a
   \end{align*}
 \end{enumerate}
@@ -1151,41 +1154,43 @@ vorigen Abschnitt folgt:
   Sei $q \in \R$ und $a_n \coloneqq q^n$.
   \[\lim q^n =
   \begin{cases}
-    0 \qquad |q| < 1\\
+    0 \qquad \abs{q} < 1\\
     1 \qquad q = 1\\
-    divergent \qquad & |q|>1 \vee q=-1
+    divergent \qquad & \abs{q}>1 \vee q=-1
   \end{cases}\]
 \begin{proof}
   \begin{enumerate}[1.~F{a}ll]
   \item $q=0 \Rightarrow q^n=0 \Rightarrow \lim q^n=0$
-  \item $0<|q|<1$\\
+  \item $0<\abs{q}<1$\\
     Man setzt:
     \begin{align*}
-      h &\coloneqq \nicefrac{1}{|q|}-1>0\Rightarrow |q| = \frac{1}{1+h}\\
-      0 &<|q|^n = \frac{1}{(1+h)^n} \leq \frac{1}{1+nh} \leq
+      h &\coloneqq \nicefrac{1}{\abs{q}}-1>0\Rightarrow \abs{q} =
+      \frac{1}{1+h}\\
+      0 &<\abs{q}^n = \frac{1}{(1+h)^n} \leq \frac{1}{1+nh} \leq
       \frac{1}{nh}
     \end{align*}
-    Nach \autoref{satz:rechenregel} Punkt~6 folgt damit, $\lim |q|^n=0
+    Nach \autoref{satz:rechenregel} Punkt~6 folgt damit, $\lim \abs{q}^n=0
     \Rightarrow \lim q^n=0$.
   \item $q=1 \Rightarrow q^n =1 \Rightarrow \lim q^n=1$
   \item $q=-1$\\
     $a_n=q^n=(-1)^n$ ist divergent. Angenommen, es existiert ein $a
     \in \R \colon a_n \rightarrow a$. Für $\varepsilon=\nicefrac{1}{2}
     \Rightarrow \exists n_0 \in \N \forall n \geq n_0 \colon
-    |a_n-a|<\nicefrac{1}{2}$. Somit gilt:
+    \abs{a_n-a}<\nicefrac{1}{2}$. Somit gilt:
     \begin{align*}
       a_{n+1}-a_n& = (-1)^{n+1}-(-1)^n = (-1)^n(-1)-(-1)^n =
       (-1)^n(-2)\\ \
-      |-2|=2 &= |a_{n+1}-a_n| \leq |a_{n+1}-a|+|a-a_n| \leq
+      \abs{-2}=2 &= \abs{a_{n+1}-a_n} \leq \abs{a_{n+1}-a} + \abs{a-a_n} \leq
       \nicefrac{1}{2} +\nicefrac{1}{2}=1
     \end{align*}
     für $n \geq n_0$ \lightning
-  \item $|q|>1$\\
+  \item $\abs{q}>1$\\
     Annahme: $q^n$ ist konvergent. Dann ist nach
     \autoref{satz:beschraenkt} $q^n$ beschränkt, d.\,h. $\exists M >
-    0 \forall n \in \N \colon |q^n| \leq M \Rightarrow M \geq |q^n|=|q|^n
-    =\underbrace{(1+|q|-1)^n}_{>0} \geq 1+n(|q|-1) \geq n(|q|-1)$\\
-    $\Rightarrow n \leq \frac{M}{|q|-1} \Rightarrow \N$ ist beschränkt
+    0 \forall n \in \N \colon \abs{q^n} \leq M \Rightarrow M \geq
+    \abs{q^n} = \abs{q}^n
+    =\underbrace{(1+\abs{q}-1)^n}_{>0} \geq 1+n(\abs{q}-1) \geq n(\abs{q}-1)$\\
+    $\Rightarrow n \leq \frac{M}{\abs{q}-1} \Rightarrow \N$ ist beschränkt
     \lightning
 \end{enumerate}
 \end{proof}
@@ -1239,7 +1244,7 @@ vorigen Abschnitt folgt:
   Vollständigkeitsaxiom. Sei $\varepsilon > 0$. Dann existiert ein
   $n_{\varepsilon} \in \N \colon a-\varepsilon < a_{n_{\varepsilon}}$. Für
   $n \geq n_{\varepsilon} \colon a-\varepsilon \leq a_{n_{\varepsilon}}
-  \leq a_n \leq a+\varepsilon\Rightarrow |a_n-a| \leq \varepsilon$ für
+  \leq a_n \leq a+\varepsilon\Rightarrow \abs{a_n-a} \leq \varepsilon$ für
   $n \geq n_{\varepsilon} \Rightarrow \lim a_n= \sup \{a_n\}$
 \item Der Beweis erfolgt analog zum ersten Fall.
 \end{enumerate}
