--- a/lischke-mengenlehre/skript.ltx
+++ b/lischke-mengenlehre/skript.ltx
@@ -188,7 +188,7 @@
 \begin{document}
 
 \title{Mengenlehre als Fundament für Mathematik und Informatik}
-\author{Lischke}
+\author{HDoz\,Dr.\,Gerhard Lischke}
 \date{Semester: SS 2008}
 \maketitle
 
