--- a/lischke-mengenlehre/skript.ltx
+++ b/lischke-mengenlehre/skript.ltx
@@ -257,7 +257,7 @@ Die Mengenlehre ist die Grundlage der Mathematik. Zu Beginn des
 20.~Jahrhunderts fand man den Begriff der Punktmengen. Diese Theorie
 entwickelte sich in Zusammenhang mit anderen Gebieten. Auch die Informatik
 lässt sich präzise mengentheoretisch fassen. Beispielsweise kann man
-\highl{Turingmaschine}n betrachten.
+\highl[Turingmaschine]{Turingmaschinen} betrachten.
 
 Es gilt, $[X,Z,f,g,h,z_{0}, z_{1}]$ ist eine Turingmaschine, falls $X$ eine
 nichtleere endliche Menge (Alphabet), $Z$ nichtleere endliche Menge
@@ -269,12 +269,20 @@ nichtleere endliche Menge (Alphabet), $Z$ nichtleere endliche Menge
 \chapter{Kritik der naiven Mengenlehre}
 
 Als Begründer der Mengenlehre gilt der deutsche Mathematiker \textsc{Georg
-Cantor} (*1845, \textdagger 1918). \todo{Definition der Menge von cantor} Die
-Definition der Menge von \textsc{Cantor} als naiv bezeichnet. Es wurde
-versucht, mit Mitteln der Logik die Mathematik aus der Mengenlehre aufzubauen.
+Cantor} (* 1845, \textdagger{} 1918). In seinem Werk "`Beiträge zur
+Begründung der transfiniten Mengenlehre"' im Jahr~1895 schrieb er:
+\begin{quote}
+  Unter einer \emph{Menge} verstehen wir jede Zusammenfassung $M$ von
+  bestimmten wohlunterschiedenen Objekten $m$ unserer Anschauung oder
+  unseres Denkens (welche die \emph{Elemente} von $M$ genannt werden)
+  zu einem Ganzen.
+\end{quote}
+Nach dieser Definition richtete sich eine lange Zeit die Mathematik
+aus. Heute bezeichnet man diese \textsc{Cantor}sche Definition der
+Menge als naiv.
 
 Einer der Hauptpersonen war \textsc{Friedrich Ludwig Gottlob Frege} (* 1848,
-\textdagger 1925). Er lebte und arbeitete in Jena. \textsc{Frege} wird als der
+\textdagger{} 1925). Er lebte und arbeitete in Jena. \textsc{Frege} wird als der
 bedeutstende Logiker weltweit bezeichnet. In verschiedenen Arbeiten versuchte
 der Wissenschaftler die Mathematik aus der Mengenlehre heraus zu entwickeln.
 Im Jahr 1901 stellte Betrand Russell fest, dass dieser Ansatz zu Widersprüchen
@@ -320,17 +328,17 @@ Die Menge der erlaubten Ausdrücke wird mit $\ausd$ bezeicnet.
 
 \paragraph{Terme und Ausdrücke}
 
-Als \highl{Terme} kommen nur die Individuenvariablen und das Konstantensymbol
-in Frage. Die Individuenvariable $x$ kommt in der Zeichenreihe $Z$
-\highl{vollfrei} vor $\coloneqq x$ kommt in $Z$ vor und an keiner Stelle des
-Vorkommens von $x$ in $Z$ steht unmittelbar davor ein Quantor (Symbol
-$\forall$ oder $\exists$). Induktiv definieren wir die Menge $\ausd$ aller
-Ausdrücke:
+Als \highl[Term]{Terme} kommen nur die Individuenvariablen und das
+Konstantensymbol in Frage. Man sagt, die Individuenvariable $x$ kommt
+in der Zeichenreihe $Z$ \highl{vollfrei} vor, wenn $x$ in $Z$ vorkommt
+und an keiner Stelle des Vorkommens von $x$ in $Z$ ein Quantor (Symbol
+$\forall$ oder $\exists$) vor der Individuenvariable steht. Induktiv
+definieren wir die Menge $\ausd$ aller Ausdrücke:
 \begin{enumerate}
  \item Sind $t_{1}$ und $t_{2}$ Terme, so sind die Zeichenreihen $t_{1}\in
   t_{2}$ und $t_{1}=t_{2}$ Ausdrücke.
  \item \begin{enumerate}
-	\item Ist $Z$ ein Ausdruck, dann ist $\tilde{}Z$ ein Ausdruck.
+	\item Ist $Z$ ein Ausdruck, dann ist $\neg Z$ ein Ausdruck.
 	\item Mit $Z_{1}$ und $Z_{2}$ sind auch die Zeichenreihen $(Z_{1}\vee
 	 Z_{2}), (Z_{1}\wedge Z_{2}), (Z_{1}\rightarrow Z_{2}),
 	 (Z_{1}\leftrightarrow Z_{2})$ Ausdrücke.
@@ -342,10 +350,10 @@ Ausdrücke:
 
 \paragraph{Logisches Schließen}
 
-Sei $X$ eine Menge im üblichen, naiven Sinne von Ausdrücken und $H$ ein
-spezieller Ausdruck. Dann heißt $H$ \highl{Folgerung} aus $X$, wenn bei
-\emph{jeder} Interpretation bei der jeder Ausdruck aus $X$ wahr wird, wird
-auch $H$ wahr.
+Sei $X$ eine Menge im üblichen, naiven Sinne von Ausdrücken und $H$
+ein spezieller Ausdruck. Dann heißt $H$ \highl{Folgerung} aus $X$,
+wenn bei \emph{jeder} Interpretation bei der jeder Ausdruck aus $X$
+wahr wird, auch $H$ wahr wird.
 
 Wir bezeichnen $\Fl(X)$ die Gesamtheit aller Folgerungen aus $X$. Man nennt
 $X$ ein \highl{Axiomensystem} und $\Fl(X)$ die durch $X$ erzeugte
