--- a/lischke-mengenlehre/skript.ltx
+++ b/lischke-mengenlehre/skript.ltx
@@ -281,13 +281,21 @@ Nach dieser Definition richtete sich eine lange Zeit die Mathematik
 aus. Heute bezeichnet man diese \textsc{Cantor}sche Definition der
 Menge als naiv.
 
-Einer der Hauptpersonen war \textsc{Friedrich Ludwig Gottlob Frege} (* 1848,
-\textdagger{} 1925). Er lebte und arbeitete in Jena. \textsc{Frege} wird als der
+Einer der Hauptpersonen bei der Formalisierung war \textsc{Friedrich
+  Ludwig Gottlob Frege} (* 1848, \textdagger{} 1925). Er lebte und
+arbeitete den größten Teil seines Lebens in Jena. \textsc{Frege} wird als der
 bedeutstende Logiker weltweit bezeichnet. In verschiedenen Arbeiten versuchte
-der Wissenschaftler die Mathematik aus der Mengenlehre heraus zu entwickeln.
-Im Jahr 1901 stellte Betrand Russell fest, dass dieser Ansatz zu Widersprüchen
-führt. Das ist unter der Bezeichnung \highl[Antinomie!Russellsche]{Russellsche
-Antinomie} bekannt.
+der Wissenschaftler die Mathematik aus der Mengenlehre heraus zu
+entwickeln. Die wesentliche Veröffentlichung war die
+"`Begriffsschrift"'\footnote{Genauer: Begriffsschrift. Eine der
+  arithmetischen nachgebildete Formelsprache des reinen Denkens}. In
+ihr formalisierte \textsc{Frege} die Prädikatenlogik. Später kam das
+Werk "`Die Grundlagen der Arithmetik"' hinzu. Dort wurde der Gedanke,
+die Mathematik aus der Logik aufzubauen, weiter
+fortgeschrieben. Jedoch entdeckte \textsc{Betrand Russell} im
+Jahr~1901 Widersprüche in dem Ansatz. Diese sind unter der Bezeichnung
+\highl[Antinomie!Russellsche]{Russellsche Antinomie} bekannt und
+setzten der naiven Mengenlehre ein Ende.
 
 Sei dazu beispielsweise $\mathfrak{E}$ eine Eigenschaft. Dann existiert eine
 Menge $M_{\mathfrak{E}}= \{x\colon\mathfrak{E}(x)\}$. Dann ist die Russellsche
@@ -298,15 +306,37 @@ Der Ausweg ist ein axiomatischer Aufbau der Mengenlehre.
 Heutzutage gibt es sehr viele Axiomensysteme. Einige seien hier genannt.
 \begin{description}
  \item[Stufentheoretischer Aufbau, Typentheorie] Dies wurde von
-  \textsc{Whitehead} und \textsc{Russell} entwickelt. \todo{ergänzen}
- \item[Stufenfreier Aufbau] Das geht zurück auf \textsc{Zermelo},
-  \textsc{Fränkel} und \textsc{Skolem}.
- \item[Klassenkalkül] nach \textsc{John von Neumann}, \textsc{Brnays},
-  \textsc{Kurt Gödel} und \textsc{Quine}. Im Verlauf der Vorlesung wird eine
+  \textsc{Whitehead}\footnote{Alfred North Whitehead, * 1861,
+    \textdagger{} 1947, britischer Philosoph, Mathematiker und
+    anglikanischer Bischof} und \textsc{Russell} entwickelt. Es gibt dabei
+  nur einfache Mengen, die Urelemente enthalten und selbst keine
+  Mengen enthalten können. Weiterhin werden Mengen $n$-ten Typs
+  definiert. Darin können Mengen bis zum $n-1$ten Typ enthalten
+  sein. Diese Definition vermeidet die Antinomie und hat sich aufgrund
+  der eingeschränkten Leistungsfähigkeit sowie der Kompliziertheit
+  nicht durchgesetzt.
+\item[Stufenfreier Aufbau] Dieser geht zurück auf
+  \textsc{Zermelo}\footnote{Ernst Zermelo, * 1871, \textdagger{} 1953,
+    deutscher Mathematiker}, \textsc{Fränkel}\footnote{Adolf Abraham
+    Halevi Fraenkel, * 1891, \textdagger{} 1965, deutsch-israelischer
+    Mathematiker} und \textsc{Skolem}\footnote{Albert Thoralf Skolem,
+    * 1887, \textdagger{} 1963, norwegischer Mathematiker, Logiker und
+    Philosoph} und ist ein axiomatischer Aufbau der Mengenlehre.
+ \item[Klassenkalkül] nach \textsc{John von Neumann}\footnote{János
+     von Neumann zu Margitta, * 1903, \textdagger{} 1957,
+     deutsch-ungarischer Mathematiker}, \textsc{Brnays},
+  \textsc{Gödel}\footnote{Kurt Friedrich Gödel, * 1906, \textdagger{}
+    1978, deutscher Mathematiker} und \textsc{Quine}\footnote{Willard
+    Van Orman Quine, * 1908, \textdagger{} 2000, amerikanischer
+    Philosoph und Logiker}. Im Verlauf der Vorlesung wird eine
   modifizierte Variante hiervon vorgestellt.
 \end{description}
 
-\chapter{Eine Formaliserung der Mengenlehre}
+\chapter{Eine Formalisierung der Mengenlehre}
+
+In diesem Kapitel sollen die Grundlagen der Logik gelegt werden. Für
+tiefgreifendere Erkenntnisse soll hier auf die Vorlesung "`Logik"'
+verwiesen werden.
 
 \section{Logische Grundlagen}
 
