--- a/lischke-mengenlehre/skript.ltx
+++ b/lischke-mengenlehre/skript.ltx
@@ -324,7 +324,8 @@ Heutzutage gibt es sehr viele Axiomensysteme. Einige seien hier genannt.
     Philosoph} und ist ein axiomatischer Aufbau der Mengenlehre.
  \item[Klassenkalkül] nach \textsc{John von Neumann}\footnote{János
      von Neumann zu Margitta, * 1903, \textdagger{} 1957,
-     deutsch-ungarischer Mathematiker}, \textsc{Brnays},
+     deutsch-ungarischer Mathematiker}, \textsc{Bernays}\footnote{Paul
+   Bernays, * 1888, \textdagger{} 1977, englischer Mathematiker},
   \textsc{Gödel}\footnote{Kurt Friedrich Gödel, * 1906, \textdagger{}
     1978, deutscher Mathematiker} und \textsc{Quine}\footnote{Willard
     Van Orman Quine, * 1908, \textdagger{} 2000, amerikanischer
