--- a/lischke-mengenlehre/skript.ltx
+++ b/lischke-mengenlehre/skript.ltx
@@ -311,7 +311,7 @@ Heutzutage gibt es sehr viele Axiomensysteme. Einige seien hier genannt.
     anglikanischer Bischof} und \textsc{Russell} entwickelt. Es gibt dabei
   nur einfache Mengen, die Urelemente enthalten und selbst keine
   Mengen enthalten können. Weiterhin werden Mengen $n$-ten Typs
-  definiert. Darin können Mengen bis zum $n-1$ten Typ enthalten
+  definiert. Darin können Mengen bis zum $n-1$-ten Typ enthalten
   sein. Diese Definition vermeidet die Antinomie und hat sich aufgrund
   der eingeschränkten Leistungsfähigkeit sowie der Kompliziertheit
   nicht durchgesetzt.
@@ -386,7 +386,7 @@ definieren wir die Menge $\ausd$ aller Ausdrücke:
 
 Sei $X$ eine Menge (im üblichen, naiven Sinne) von Ausdrücken und $H$
 ein spezieller Ausdruck. Dann heißt $H$ \highl{Folgerung} aus $X$,
-wenn bei \emph{jeder} Interpretation bei der jeder Ausdruck aus $X$
+wenn bei \emph{jeder} Interpretation, bei der jeder Ausdruck aus $X$
 wahr wird, auch $H$ wahr wird.
 
 Wir bezeichnen $\Fl(X)$ die Gesamtheit aller Folgerungen aus $X$. Man nennt
