--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -369,6 +369,149 @@ $z(t)\in\Omega\Rightarrow\frac{d}{dt}f(z(t))=f'(z(t))\cdot z'(t)$.
 
 \clearpage
 \appendix
+
+\chapter{Übungsaufgaben}
+
+\begin{enumerate}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+ \item \todo{hinzufügen}
+
+ \item Man drücke $\cos^{4} x$ und $\sin^{4} x$ durch Linearkombinationen von
+  $\cos kx$ und $\sin kx$ mit $k\in\N$ aus.
+ \item Zu gegebenem $u$ oder $v$ bestimme man $v$ oder $u$, so dass $w=u+iv$
+  holomorph ist und die angegebene Anfangsbedingung ist:
+  \begin{enumerate}[a)]
+   \item $v=\frac{y}{x^{2}+y^{2}}, w(2)=0$
+   \item $u=e^{x}(x\cos y-y\sin y), w(0)=0$
+  \end{enumerate}
+ \item Drei aufeinanderfolgende Ecken eines Parallelogramms mögen in den
+  Punkten $z_{1}, z_{2}, z_{3}$ liegen. Man bestimme die Lage der vierten Ecke.
+ \item $z_{0}$ und $z_{1}$ seien zwei benachbarte Ecken eines regelmäßigen
+  $n$"~Ecks. Wo liegt die folgende Ecke?
+ \item Einem Kreis mit dem Radius $R$ und dem Mittelpunkt $c=a+ib$ sei ein
+  regelmäßiges $n$"~Eck einbeschrieben. Eine der Ecken liege im Punkt $z_{0}=
+  a+(b+R)i$. Wo liegen die übrigen Ecken?
+ \item Man stelle die Zahlen in trigonometrischer Form dar:
+  \begin{enumerate}[a)]
+   \item $z=1+i\tan\alpha$ mit $0<\alpha<\nicefrac{\pi}{2}$
+   \item $1-\cos\alpha+i \sin\alpha$ mit $0<\alpha<2\pi$
+  \end{enumerate}
+ \item Berechnen Sie (alle Zweige):
+  \begin{enumerate}[a)]
+   \item $\log(-e)$
+   \item $\ln(-2)$
+   \item $2^{i}$
+   \item $\log i$
+  \end{enumerate}
+ \item Berechnen Sie (alle Zweige):
+  \begin{enumerate}[a)]
+   \item $\log\frac{1+i}{\sqrt{2}}$
+   \item $\log(x+iy)$
+   \item $e^{\pi i}$
+   \item $i^{i}$
+   \item $\sin (x+iy)$
+  \end{enumerate}
+ \item Man stelle $z=1+\sin\alpha-i\cos\alpha$ mit $0<\alpha<2\pi$ in
+  trigonometrischer Form dar.
+ \item Man bestimme die Wurzeln $x\in\C$ der Gleichung $(x+i)^{n} +(x-i)^{n}
+  =0$.
+ \item Man bestimme
+  \begin{enumerate}[a)]
+   \item $\left(\frac{1+i}{\sqrt{2}}\right)^{-i}$
+   \item $\tan \frac{\pi i}{2}$
+   \item $\cos (x+iy)$
+   \item $\arctan xi$
+  \end{enumerate}
+ \item Man bestimme die Lösungen $x$ der Gleichung:
+  \begin{gather*}
+    \left(\frac{1+xi}{1-xi}\right)^{n}= \frac{1+i\tan\alpha}{1- i
+       \tan\alpha}\qquad\alpha\in\R
+  \end{gather*}
+ \item Berechnen Sie $\int_{\gamma} \abs{z}\,dz$, wobei $\gamma$ geradlinig
+  oder auf $\partial E$ mit $E$ Einheitskreis mit $\abs{z}<1$ von $-i$ nach
+  $i$ läuft.
+ \item Man berechne mit der Cauchy"=Integralformel:
+  \begin{enumerate}[a)]
+   \item $\int_{\abs{z}=2} \frac{\sin z}{z+i}\,dz$
+   \item $\int_{\abs{z+2i}=3} \frac{dz}{z^{2}+\pi^{2}}$
+   \item $\int_{\abs{z}=2} \frac{dz}{z^{4}-1}$
+  \end{enumerate}
+ \item Man berechne
+  \begin{enumerate}[a)]
+   \item $\int_{\gamma} \abs{z}^{2}\,dz$ mit $\gamma\colon z(t)= a\cos
+    t+ib\sin t, t\in[0, 2\pi], a,b>0$
+   \item $\int_{\abs{z}=r} \abs{z}\,d\abs{z}$
+   \item $\int_{\gamma} \frac{z}{(z^{2}+4)^{2}}\,dz$ mit
+    $\gamma=\overline{z_{1}z_{2}}$ Strecke von $z_{1}$ nach $z_{2}$
+  \end{enumerate}
+ \item Mit Hilfe der Cauchy"=Integralformel (für $f$ bzw. $f^{(n)}$) bestimme
+  man
+  \begin{gather*}
+    \int_{\abs{z-\nicefrac{3}{2}}=1} \frac{e^{z}}{z(z-1)^{3}}\,dz
+  \end{gather*}
+ \item Man berechne
+  \begin{gather*}
+    \int_{\partial E} z^{2}\,dz+z^{-2}\,dy
+  \end{gather*}
+ \item Mittels Cauchy"=Integralformel bestimme man:
+  \begin{enumerate}[a)]
+   \item $\int_{\abs{z}=3} \frac{e^{az}}{z^{2}(z^{2}+2z+2}\,dz$)
+   \item $\int_{\abs{z}=r} \frac{dz}{(z-a)^{n} (z-b)^{m}}, \abs{a}<r<\abs{b},
+    m,n\in\N\setminus\{0\}$
+  \end{enumerate}
+ \item Man bestimme Real-, Imaginärteil, Betrag und Argument:
+  \begin{enumerate}[a)]
+   \item $z=\frac{1+i}{2-3i}$
+   \item $z=\left(\frac{1+\sqrt{3}i}{1-\sqrt{3}i}\right)^{201}$
+   \item $z= (1+i)^{2n}+(1-i)^{2n}, n\in\N$
+  \end{enumerate}
+ \item Bestimmen Sie den Konvergenzradius $\rho$:
+  \begin{enumerate}[a)]
+   \item $\sum_{k=0}^{\infty} \frac{z^{3k}}{2^{k}}$
+   \item $\sum_{k=0}^{\infty} \left(\frac{3k^{2}+k}{2k^{2}+1}\right)^{k} z^{k}$
+   \item $\sum_{k=0}^{\infty} \frac{n!}{3^{n} (2n)!} (z+1)^{n}$
+  \end{enumerate}
+ \item Man bestimme die Potenzreihenentwicklung von $f$ um $z_{0}$:
+  \begin{enumerate}[a)]
+   \item $f(z)= \frac{3z^{2}+1}{z+1}, z_{0}=2, z_{0}=i$
+   \item $f(z)= \frac{z^{2}}{(z+i)(z-i)^{2}}, z_{0}=0$
+  \end{enumerate}
+
+ \item Man bestimme den Konvergenzradius
+  \begin{gather*}
+    \sum_{k=0}^{\infty} (n^{2}+b^{n})z^{n}\qquad b\in\C
+  \end{gather*}
+ \item Die Summe $\sum a_{k}z^{k}$ habe den Konvergenzradius $\rho$. Welchen
+  Konvergenzradius hat
+  \begin{enumerate}
+   \item $\sum a_{k} z^{2k}$
+   \item $\sum a_{k}^{2} z^{k}$
+  \end{enumerate}
+ \item Man entwickle in eine Potenzreihe um $z_{0}=0$:
+  \begin{enumerate}[a)]
+   \item $f(z)= \sin^{2}z$
+   \item $f(z)= \cos(z^{2}-1)$
+  \end{enumerate}
+ \item Man bestimme die Art der Singularitäten:
+  \begin{enumerate}[a)]
+   \item $\frac{1-\cos z}{z^{2}}$
+   \item $e^{\nicefrac{1}{z}} +\nicefrac{1}{z}$
+  \end{enumerate}
+\end{enumerate}
+
 \begin{thebibliography}{99}
 
 \bibitem{walter} Wolfgang Walter. Analysis II.
