Korrekturen von Vu Huu Chi
git-svn-id: https://svn.lug-jena.de/uni-skripte@1489 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -9559,7 +9559,7 @@ A^{n}(Ax)\in R(A^{n})$.
     $(I-K)^{-1}\in \linOp(X)$, d.\,h. $I-K$ ist surjektiv und
     $(I-K)^{-1}$ ist beschränkt (stetig).
    \item Ist der inverse Operator $(I-K)^{-1}$ nicht injektiv, so ist der
-    Nullraum von $N-K$ nicht Null ($\dim N(I-K) <\infty$) und $R(I-K)\subsetneq X$
+    Nullraum von $I-K$ nicht Null ($\dim N(I-K) <\infty$) und $R(I-K)\subsetneq X$
     ein echter (abgeschlossener) Teilraum.
   \end{enumerate}
 
@@ -9893,7 +9893,7 @@ Orthogonales Komplement: $U^{\perp} = \{v\in H\colon \forall u\in U\colon
 \subsection{Normal auflösbare Operatoren}
 
 $(X,X^{+}), (Y, Y^{+})$ Dualsysteme, $A,A^{+}$ konjungierte Operatoren.
-(Wenn ist $Ax=y$ lösbar?) $Ax = y$ ($y \in R(A)$) $\Longrightarrow$
+(Wann ist $Ax=y$ lösbar?) $Ax = y$ ($y \in R(A)$) $\Longrightarrow$
 $\forall g\in N(A^{+})$ $\Rightarrow$ $\sprod{y,g} = \sprod{Ax, g} =
 \sprod{x,A^{+}g} = \sprod{x,0} = 0$, d.\,h. "`$y\perp N(A^{+})$"'
 
