Der Rest vom :=
git-svn-id: https://svn.lug-jena.de/uni-skripte@1491 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -177,6 +177,14 @@
 		 \begin{description}}%
 		{\end{description}}
 
+% ein ordentliches :=
+% Lösung stammt aus der TeX-FAQ
+  \mathchardef\ordinarycolon\mathcode`\:
+  \mathcode`\:=\string"8000
+  \begingroup \catcode`\:=\active
+    \gdef:{\mathrel{\mathop\ordinarycolon}}
+  \endgroup
+
 \makeindex
 
 \SVN $LastChangedRevision$
