Einarbeitung eines Kommentars --> \help aufgeloest
git-svn-id: https://svn.lug-jena.de/uni-skripte@1494 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -6741,8 +6741,12 @@ $A$ sei kompakt. Dann wäre auch $I= A^{-1}A$ kompakt und damit $\dim H <
 stetigen inversen Abbildung lösen lässt.
 
 Die Fredholm'sche Alternative betrachtet stattdessen Gleichungen der Form
-$(A-\lambda I)x =y$ ($\lambda \ne0$). Setzen wir o.\,B.\,d.\,A. $\lambda=1$
-\help{Warum gilt o.\,B.\,d.\,A.? Warum machen wir das?} bleibt die Gleichung
+$(A-\lambda I)x =y$ ($\lambda \ne0$). Setzen wir
+o.\,B.\,d.\,A.\footnote{Wir gehen von $Ax-lx=y$ aus und nehmen an,
+  dass $l\neq0$. Dann kann man durch $l$ teilen:
+  $\nicefrac{A}{l}x-x=\nicefrac{y}{l}$. Mit
+  $\nicefrac{A}{l}=\overline{A}$ ergibt sich der Rest.} $\lambda=1$
+ bleibt die Gleichung
 \begin{gather*}
   Ax - x =y
 \end{gather*}
