erste Uebungsserie eingepflegt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1501 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -569,11 +569,47 @@ $z(t)\in\Omega\Rightarrow\frac{d}{dt}f(z(t))=f'(z(t))\cdot z'(t)$.
 \chapter{Übungsaufgaben}
 
 \begin{enumerate}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
+ \item Wo liegen die Zahlen $z$ in der \textsc{Gauß}schen Zahlenebene?
+  \begin{enumerate}[a)]
+   \item $\abs{z+3}\leq2$ (Kreis mit Radius 2 und Mittelpunkt bei $-3$.)
+   \item $\frac{z-z_{1}}{z-z_{2}}=1$, wobei $z_{1}\neq z_{2}\in\C$ fest sind.\\
+    Nach Umstellen erhält man, $\abs{z-z_{1}}= \abs{z-z_{2}}$, d.\,h. $z$ hat
+    den gleichen Abstand zu $z_{1}$ und $z_{2}$. Also liegt $z$ auf einer
+    Gerade, die senkrecht auf der Verbindungsstrecke zwischen $z_{1}$ und
+    $z_{2}$ steht.
+  \end{enumerate}
+ \item Bestimme den Real- und Imaginärteil von
+  \begin{enumerate}[a)]
+   \item $(4+8i)(3-2i)^{2}= (4+8i)(5-12i)= 116-8i$
+   \item $\frac{4+8i}{(3+2i)^{2}}= \frac{(4+8i)(3+2i)^{2}}{\abs{3+2i}^{4}} =
+    \frac{116}{225}- \frac{8}{225}i$
+   \item $\abs[\big]{\frac{17-i}{1+i}}=
+    \abs[\big]{\frac{(17-i)(1+i)}{\abs{1+i}^{2}}}= \nicefrac{1}{2}
+    \abs{16-18i}= \abs{8-9i}= \sqrt{8^{2}+(-9)^{2}}= \sqrt{145}$
+  \end{enumerate}
+ \item Man stelle die folgenden Zahlen in trigonometrischer Form:
+  \begin{enumerate}[a)]
+   \item $1+i= \sqrt{2} e^{i\nicefrac{\pi}{4}}$
+   \item $1+i\sqrt{3}= 2e^{i\nicefrac{\pi}{3}}$
+   \item $\sqrt{3}-i= 2e^{-\nicefrac{\pi}{6}}$
+  \end{enumerate}
+ \item Man berechne:
+  \begin{enumerate}[a)]
+   \item $\sqrt{-7+24i}$\\
+    Im Allgemeinen gilt: $(a+ib)^{2}= -7+24i\Rightarrow
+    a^{2}-b^{2}+2abi=-7+24i\Rightarrow ab=12$ und weiter ist $a^{2}-b^{2}=-7
+    \Rightarrow b^{4}+7b^{2}-144=0 \Rightarrow b^{2}=16 \Rightarrow b=\pm 4$
+    und $a=\pm3$.
+   \item $\sqrt[3]{i}= \sqrt[3]{e^{i}\nicefrac{\pi}{2}}= e^{i\nicefrac{\pi}{6}
+    +i\nicefrac{2}{3}k\pi}$ mit $k=0, 1,2$
+   \item $\sqrt[3]{-1+i}= \sqrt[3]{\sqrt{2} e^{i\nicefrac{3\pi}{4}}}=
+    \sqrt[6]{2} e^{i\nicefrac{\pi}{4}+ i\nicefrac{2}{3}k\pi}$ mit $k= 0,1,2$.
+   \item $\sqrt[6]{-64}= 2\sqrt[6]{-1}= 2\sqrt[6]{e^{-i\pi}}=
+    2e^{-i\nicefrac{\pi}{6}+ i\nicefrac{k\pi}{3}}$ mit $k=0,\dotsc,5$
+  \end{enumerate}
+ \item Man löse die quadratische Gleichung: $z^{2}+ (5-2i)z+5(1-i)=0$.\\
+  Es ist $p(X)= X^{2}+(5-2i)X+5(1-i)= (X+(3-i))(X+(2-i))\in\C[X]$ und man kann
+  sofort die Nullstellen $(i-3), (i-2)$ ablesen.
  \item \todo{hinzufügen}
  \item \todo{hinzufügen}
  \item \todo{hinzufügen}
