dritte Uebungsserie eingepflegt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1503 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -61,6 +61,7 @@
 \usepackage{fixltx2e}
 \usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{nicefrac}
+\usepackage{amsfonts}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -669,11 +670,99 @@ $z(t)\in\Omega\Rightarrow\frac{d}{dt}f(z(t))=f'(z(t))\cdot z'(t)$.
     \nicefrac{1}{2i} \left((\cos\phi+i\sin\phi)^{3}-
     (\cos\phi-i\sin\phi)^{3}\right)= 3\cos^{2}\phi\sin\phi- \sin^{3}\phi$
   \end{enumerate}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
- \item \todo{hinzufügen}
+ \item Zu gegebenem $u$ bestimmte man $v$ so, dass $w=u+iv$ holomorph ist und
+  die angegebene Anfangsbedingung erfüllt:
+  \begin{enumerate}[a)]
+   \item $u=x^{2}-y^{2}+xy, w(0)=0$\\
+    Bei beiden Aufgaben wird eine partiell stetig differenzierbare Funktion
+    gesucht, die die Cauchy-Riemannschen Differentialgleichungen und die
+    Anfangsbedingung erfüllt. Es gilt, $\frac{\partial u}{\partial x}=
+    \frac{\partial v}{\partial y}= 2x+y$. Also ist $v(x,y)= 2xy+
+    \nicefrac{y^{2}}{2}+h(x)$. Wegen der Cauchy"=Riemannschen
+    Differentialgleichungen ergibt sich weiter $\frac{\partial v}{\partial x}=
+    2y+h'(x)=-\frac{\partial u}{\partial y}= 2y-x$. Also ist $h'(x)=-x$ und
+    $h(x)= -\nicefrac{x^{2}}{2}+c$ mit $c\in\R$. Insgesamt ergibt sich für die
+    Funktion
+    \begin{gather*}
+      w(x,y)= (x^{2}-y^{2}+xy)+
+	 i\left(2xy+\nicefrac{y^{2}}{2}-\nicefrac{x^{2}}{2}+c\right)
+    \end{gather*}
+    Wegen der Anfangsbedingung $w(0)=0$ ist $c=0$ und $w(z)=
+    (1-\nicefrac{i}{2})z^{2}$.
+   \item $u=x^{3}+6x^{2}y-3xy^{2}-2y^{3}, w(0)=0$\\
+    Mit selbigen Überlegungen wie oben ergibt sich $w(z)= (1-2i)z^{3}$.
+  \end{enumerate}
+ \item Sei $w= e^{i\nicefrac{2\pi}{3}}$ Man berechne (vereinfache): $(a+b+c)(a
+  +bw+cw^{2})(a+bw^{2}+cw)$.\\
+  Es ist:
+  \begin{align*}
+    w &= e^{i\nicefrac{2\pi}{3}} = \cos\nicefrac{2\pi}{3}+i
+       \sin\nicefrac{2\pi}{3}= -\nicefrac{1}{2} +i\nicefrac{\sqrt{3}}{2}\\
+    w^{2} &= e^{i\nicefrac{4\pi}{3}} = \cos\nicefrac{4\pi}{3}+
+       i\sin\nicefrac{4\pi}{3}=  -\nicefrac{1}{2} -i\nicefrac{\sqrt{3}}{2}\\
+    w^{3} &= e^{i\nicefrac{6\pi}{3}} =1\\
+    w^{4} &= w^{3}\cdot w= -\nicefrac{1}{2} +i\nicefrac{\sqrt{3}}{2}
+  \end{align*}
+  Also haben wir $(a+b+c)(a +bw+cw^{2})(a+bw^{2}+cw)= (a+b+c)(a^{2} +w(ab+ac)
+  +w^{2}(ac+ab+bc) +w^{3}(b^{2}+c^{2}) +w^{4}bc)= (a+b+c)(a^{2} +b^{2} +c^{2}
+  -(ab+bc+ac))$.
+ \item Man drücke die Funktionen durch $\sin\phi$ und $\cos\phi$ mit $n\in\N,
+  \phi\in\R$ aus:
+  \begin{enumerate}[a)]
+   \item $\sin n\phi$
+    \begin{align*}
+      \sin n\phi &= \nicefrac{1}{2i} \left(e^{in\phi}-e^{-in\phi}\right) =
+	 \nicefrac{1}{2i} \left((e^{i\phi})^{n}- (e^{-i\phi})^{n}\right)\\
+      &= \nicefrac{1}{2i} ((\cos\phi+i\sin\phi)^{n}- (\cos\phi-i\sin\phi)^{n})\\
+      &= \nicefrac{1}{2i} \left(\sum_{k=0}^{n} \binom{n}{k} \cos^{n-k}\phi
+	 \cdot i^{k}\sin^{k}\phi- \sum_{k=0}^{n}\binom{n}{k} \cos^{n-k}\phi
+	 \cdot(-i)^{k} \sin^{k}\phi\right)\\
+      &= \nicefrac{1}{2i} \sum_{k=0}^{n} \binom{n}{k} i^{k}\cos^{n-k}\phi
+	 \sin^{k}\phi \cdot(1-(-1)^{k})\\
+      &= \nicefrac{1}{2i} \sum_{k=0}^{\lfloor\frac{n-1}{2}\rfloor}
+	 \binom{n}{2k+1} 2i^{2k+1}\cos^{n-2k+1} \phi \sin^{2k+1}\phi\\
+      &= \sum_{k=0}^{\lfloor\frac{n-1}{2}\rfloor} \binom{n}{2k+1} i^{2k}
+	 \cos^{n-2k-1}\phi \sin^{2k+1}\phi\\
+      &= \sum_{k=0}^{\lfloor\frac{n-1}{2}\rfloor} \binom{n}{2k+1} (-1)^{k}
+	 \cos^{n-2k-1}\phi \sin^{2k+1}\phi
+    \end{align*}
+   \item $\cos n\phi$\\
+    \begin{align*}
+      \cos n\phi &= \nicefrac{1}{2} \left(e^{in\phi}+e^{-in\phi}\right)=
+    \nicefrac{1}{2} \left((e^{i\phi})^{n}+(e^{-i\phi})^{n}\right)\\
+      &= \nicefrac{1}{2} ((\cos\phi+i\sin\phi)^{n}+ (\cos\phi-i\sin\phi)^{n})\\
+      &= \nicefrac{1}{2} \left(\sum_{k=0}^{n} \binom{n}{k} \cos^{n-k}\phi
+	 i^{k} \sin^{k}\phi+ \sum_{k=0}^{n} \binom{n}{k} \cos^{n-k}\phi
+	 (-i)^{k} \sin^{k}\phi\right)\\
+      &= \nicefrac{1}{2} \sum_{k=0}^{n} \binom{n}{k} i^{k} \cos^{n-k}\phi
+	 \sin^{k}\phi (1+(-1)^{k})\\
+      &= \nicefrac{1}{2} \sum_{k=0}^{\lfloor\nicefrac{n}{2}\rfloor}
+	 \binom{n}{2k} 2i^{2k} \cos^{n-2k}\phi \sin^{2k}\phi=
+	 \sum_{k=0}^{\lfloor\nicefrac{n}{2}\rfloor} \binom{n}{2k} (-1)^{k}
+	 \cos^{n-2k}\phi \sin^{2k}\phi
+    \end{align*}
+  \end{enumerate}
+ \item Man drücke $\cos^{3}\phi$ durch Funktionen von Vielfachen des Winkels
+  $\phi$ aus.\\
+  \begin{align*}
+    \cos^{3}\phi &= \frac{1}{2^{3}} \left(e^{i\phi}+e^{-i\phi}\right)^{3} =
+       \frac{1}{8} \left(e^{i3\phi}+ 3e^{i2\phi}e^{-i\phi}+
+       3e^{i\phi}e^{-i2\phi}+ e^{-i3\phi}\right)\\
+    &= \frac{1}{8} \left(e^{i3\phi}+ 3e^{i\phi}+ 3e^{-i\phi}+
+       e^{-i3\phi}\right)\\
+    &= \frac{1}{8} (\cos3\phi+ i\sin3\phi+ 3\cos\phi+ 3i\sin\phi+ 3\cos\phi-
+       3i\sin\phi+ \cos3\phi- i\sin3\phi)\\
+    &= \frac{1}{4}(\cos3\phi+3\cos\phi)
+  \end{align*}
+ \item Man beweise für $z,w\in\C$: $\abs{z+w}^{2}+ \abs{z-w}^{2}= 2\abs{z}^{2}
+  +2\abs{w}^{2}$.\\
+  Für allgemeine $z\in\C$ wissen wir, dass $\abs{z}^{2}=z\cdot\overline{z}$.
+  Also können wir schreiben: $\abs{z+w}^{2}+ \abs{z-w}^{2}=
+  (z+w)(\overline{z+w}) +(z-w)(\overline{z-w})= (z+w)(\overline{z}+
+  \overline{w})+ (z-w)(\overline{z}-\overline{w})= (z\overline{z}+
+  w\overline{w}+ z\overline{w}+ w\overline{z})+ (z\overline{z}+ w\overline{w}-
+  z\overline{w}- w\overline{z})= 2z\overline{z}+ 2w\overline{w}= 2\abs{z}^{2}+
+  2\abs{w}^{2}$.
  \item \todo{hinzufügen}
 
  \item Man drücke $\cos^{4} x$ und $\sin^{4} x$ durch Linearkombinationen von
