--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -186,7 +186,7 @@
 \begin{document}
 
 \title{Funktionentheorie}
-\author{Albin Weber}
+\author{Prof.\,Dr. Albin Weber}
 \date{Semester: SS 2008}
 \maketitle
 
