Definition für Schreibweisen bei Funktionen über \R
Ich habe den Text komplett umgeschrieben, weil ich glaube, dass der Kern
dieser Definition die Abbildung von \R nach \R ist. Dann ergibt sich
nämlich C(\overline{Omega}) = U(\overline{Omega},\K) auch als Folgerung
und nicht als Definition.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1512 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2203,16 +2203,21 @@ Wenn wir im Folgenden von einem \highl{Gebiet} sprechen, so ist damit eine
 Teilmenge des $\R^{n}$ gemeint.
 
 \begin{defini}\label{def:offene-beschr-Gebiete}
-  \begin{enumerate}
-   \item Es sei $\Omega \subset\R^{n}$ ein offenes und beschränktes Gebiet und
-    $E=\K$. Dann ist gelten die beiden Kurzschreibweisen:
-    \highl{$C(\Omega)$}${}:= C(\Omega, E)$ und
-    \highl{$C(\overline{\Omega})$}${}:= U(\overline{\Omega},E)$.
+  Für komplex- oder reellwertige Funktionen ($E=\K$) aus einem offenen Gebiet
+  $\Omega\subset\R^{n}$, verkürzt man die Schreibweise und lässt die Angabe
+  des Wertebereichs weg; \highl{$C(\Omega)$}${}:= C(\Omega, \K)$.
 
-   \item Für ein offenes, aber nicht notwendiger Weise beschränktes Gebiet
-    $\Omega \subset \R^{n}$ gilt die Kurzschreibweise
-    \highl{$\overline{C}(\Omega)$}${}:= U(\Omega, E)$.
-  \end{enumerate}
+  Außerdem definiert man \highl{$\overline{C}(\Omega)$}${}:= U(\Omega, \K)$
+  als die Menge der gleichmäßig stetigen und beschränkten Funktionen
+  über $\K$.
+  \help{Die Schreibweise suggeriert, dass der Abschluss der Menge der stetigen
+    Funktionen über einem Gebiet gleich der Menge der gleichmäßig stetigen
+    Funktionen über dem Gebiet ist. Stimmt das? Aber dann wäre der Abschluss
+    eine Teilmenge der Menge $\overline{C}=U\subset C$.}
+
+  Für ein abgeschlossenes und beschränktes Gebiet sind nach
+  \autoref{bem:kompakt} alle Funktionen auf $\K$ gleichmäßig stetig;
+  $C(\overline{\Omega}) = U(\overline{\Omega},\K)$.
 \end{defini}
 
 Also ist nach \autoref{satz:U-Banachraum} $(\overline{C}(\Omega),
