--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2159,6 +2159,7 @@ Raum~$(X,d)$ ein metrischer Raum und $(E,\norm{\cdot}_{E})$ eine Banachraum.
        \{ f\colon X\rightarrow E\colon f
          \text{~gleichm‰ﬂig stetig und beschr‰nkt}\} \subset B(X,E)
   \end{gather*}
+  \help{Soll das vielleicht $\subset B(X,E)\cap C(X,E)$ sein?}
 \end{defini}
 
 \begin{satz}\label{satz:U-Banachraum}
