Das Paket makeidx statt index verwenden
index hat den Nachteil, dass das Argument von \index nicht direkt
eingelesen wird, sondern vorher von TeX expandiert wird. Daher kommen
komische Sachen beim Indexgenerator an, der diese erst entwirren muss.

Und mit dem Paket index gab es vermehrt übervolle Boxen im Index. siehe
Änderung diesbezüglich an der Vorlage.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1517 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -27,7 +27,7 @@
 
 \usepackage{ifthen}
 \usepackage{mathrsfs}  % \mathscr
-\usepackage{index}
+\usepackage{makeidx}
 \usepackage[final]{graphicx}
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
