Das Paket microtype einbinden
git-svn-id: https://svn.lug-jena.de/uni-skripte@1518 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -40,6 +40,7 @@
 \usepackage[osf,slantedGreek]{mathpazo}
 \usepackage[scaled=.9]{helvet}
 \usepackage{courier}
+\usepackage[final]{microtype}
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage[all,warning]{onlyamsmath}
